--- a/css/main-page.css
+++ b/css/main-page.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -70,7 +70,7 @@ a:hover {
 }
 
 .banner {
-    min-height: calc(100vh - 87px);
+    height: calc(100vh - 87px);
     background-image: url("../images/banner-glowna.jpg");
     background-position: center;
     background-size: cover;
@@ -84,7 +84,7 @@ a:hover {
 
 .banner-content {
     max-width: 900px;
-    border: 6px solid rgba(255,255,255, 0.7);;
+    border: 6px solid rgba(255,255,255, 0.7);
     text-align: center;
     padding: 100px;
     position: relative;
@@ -229,7 +229,7 @@ a:hover {
 }
 
 
-.section-header h2 {
+h2 {
     font-family: 'Playfair Display', serif;
     text-align: center;
     font-size: 2.2em;
@@ -259,6 +259,7 @@ a:hover {
     border-radius: 50%;
     margin-top: 50px;
     margin-bottom: 50px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
 }
 
 .my-message {
@@ -276,13 +277,13 @@ a:hover {
     font-weight: 300;
 }
 
-.my-message h4 {
+h4 {
     font-size: 1.5em;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-.my-message span {
+h4 span {
     font-weight: 300;
     text-transform: capitalize;
     color: rgba(255,255,255, 0.7)
@@ -426,8 +427,8 @@ h5 {
     align-self: flex-end;
     margin-right: 20px;
     cursor: pointer;
+    background-color: transparent;
     border: none;
-    background-color: inherit;
     width: 30px;
     height: 30px;
     padding-bottom: 0;
@@ -437,8 +438,8 @@ h5 {
 .btn-close:after{
     font-family: 'FontAwesome';
     content: '\f00d';
-    color:#5d5d5d;
-    font-size: 2em;
+    color: #EE7785;
+    font-size: 2.3em;
 }
 
 .btn-to-top {
@@ -466,7 +467,7 @@ h5 {
         flex-direction: column;
     }
     .banner{
-        min-height: calc(100vh - 141px);
+       height: calc(100vh - 141px);
     }
 
     .page-menu>.page-menu-list{
@@ -478,9 +479,25 @@ h5 {
     .banner-content {
         padding:50px;
     }
+    .contact-area .row, #contact-form {
+        flex-direction: column;
+    }
+    #contact-form {
+        flex-direction: column;
+    }
+    .contact-div {
+        width: 100%;
+    }
+    .contact-area .row {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
 }
 
 @media (max-width: 820px) {
+    .banner{
+        height: calc(100vh - 87x);
+    }
     .page-header{
         flex-direction: row;
     }
@@ -491,17 +508,26 @@ h5 {
         top: 80px;
         margin-left: 0;
         width: 300px;
-        height: 300px;
         flex-direction: column;
         justify-content: space-around;
-        align-items: center;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        flex-grow: 100%;
+        padding-top: 17px;
         transition: 1s;
         background-color: rgba(255,255,255, 0.7);
     }
+    .page-menu>.page-menu-list a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 13px;
+        padding-bottom: 15px;
+    }
     .page-menu>.page-menu-list.show {
         transform: translate(100%);
+    }
+    .page-menu>.page-menu-list a:hover {
+        background-color: rgb(0, 151, 211);
+        color:white;
     }
     .menu-burger {
         display: flex;
@@ -526,11 +552,17 @@ h5 {
     .my-message {
         margin-right: 50px;
     }
+    .my-experience-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 50px;
+    }
     .page-menu-list.footer {
         flex-direction: column;
         align-items: center;
     }
-    .page-footer div>li {
+    .footer-contact li {
         padding-top: 0;
     }  
 }
@@ -561,6 +593,12 @@ h5 {
     .social-media-list a {
         font-size: 1.5em;
     }
+    .contact-detail h4 {
+        font-size: 1em;
+    }
+    .contact-detail p {
+        font-size: 0.8em;
+    }
 }
 
 @media (max-width: 350px) {
@@ -570,5 +608,8 @@ h5 {
     .my-image img {
         max-height: 250px;
         max-width: 250px;
+    }
+    .contact-detail h4 {
+        font-size: 0.7em;
     }
 } 
