added intro animation

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -7,20 +7,33 @@
     margin-bottom: 30px;
 }
 
-.gallery-container img {
+.img-container {
+    width: 300px;
+    height: 225px;
+    overflow: hidden;
     border-radius: 5px;
     margin-bottom: 20px;
+    position: relative;
 }
 
-.gallery-container img:hover {
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.4);
+.gallery-container img {
+    transition: 1s;
+}
+
+.img-container:hover {
+    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.6);
     transition: all 0.3s ease;
 }
 
+.gallery-container img:hover {
+    transform: scale(1.2);
+    transition: 1s;
+}
+
  .gallery-container {
-     display: flex;
-     justify-content: space-around;
-     flex-wrap: wrap;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
  }
 
  .fancybox-caption__body {
