--- a/css/main-page.css
+++ b/css/main-page.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-.intro {
+body.intro {
     overflow: hidden;
 }
 
@@ -152,7 +152,7 @@ a:hover {
 
 .my-offer .container {
     height: 100%;
-    margin-top: 50px;
+    padding-top: 50px;
     margin-bottom: 50px;
     display: flex;
     flex-direction: column;
@@ -458,7 +458,7 @@ h5 {
 .btn-to-top {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 21px;
     right: 15px;
     z-index: 99; 
     border: none;
@@ -515,7 +515,7 @@ h5 {
         flex-direction: row;
     }
     .page-menu>.page-menu-list{
-        position: fixed;
+        position: absolute;
         z-index: 2;
         left: -300px;
         top: 80px;
