--- a/css/main-page.css
+++ b/css/main-page.css
@@ -481,6 +481,55 @@ h5 {
     background-color: #EE7785;
 }
 
+.cookie {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: #EE7785;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    opacity: 0.9;
+}
+
+.cookie .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.cookie-div {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 1.1em;
+}
+
+.btn-cookie {
+    background-color: white;
+    color: #EE7785;
+    font-size: 1.2em;
+    font-weight: bold;
+    padding: 8px 15px;
+    border: 2px solid #EE7785;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+}
+
+.btn-cookie:hover {
+    background-color: #EE7785;
+    color: white;
+    border: 2px solid white;
+}
+
+.hide {
+    display: none;
+}
+
 @media (max-width: 1070px) {
     .page-header{
         flex-direction: column;
